--- a/Style.css
+++ b/Style.css
@@ -59,3 +59,33 @@
 .social-media .icon-button:hover {
   opacity: 0.7;
 }
+
+.project-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.project-item h4 {
+  margin-bottom: 10px;
+}
+
+.project-item p {
+  flex-grow: 1;
+}
+
+.project-item .btn {
+  align-self: flex-start;
+  margin-top: 10px;
+}
+
+.projects-section .row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projects-section .col-md-4 {
+  display: flex;
+  flex-direction: column;
+}
